--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "nodemailer": "^6.9.3"
