--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^9.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
