--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "nodemailer": "^6.9.3"
+    "nodemailer": "^6.9.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
