added readme.md file and production end file example

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,26 @@
 PORT=
-ACCOUNT_ACTIVATION_SECRET=thisIsJWT_secret
-REGISTER_JWT_EXPIRED_TIME='5m'
-ACCOUNT_LOGIN_SECRET=thisIsJWT_secret_FOR_Login
-LOGIN_JWT_EXPIRED_TIME="4h"
-FORGET_SECRET=thisForgetSecret
-FORGET_JWT_EXPIRED_TIME="5m"
+ACCOUNT_VERIFICATION_SECRET=
+ACCOUNT_VERIFICATION_EXPIRED_TIME=
 
-SMTP_HOST=smtp.gmail.com
+ACCOUNT_LOGIN_SECRET=
+LOGIN_JWT_EXPIRED_TIME=
+FORGET_SECRET=
+FORGET_JWT_EXPIRED_TIME=
+
+SMTP_HOST=
 SMTP_PORT=587
 SMTP_USERNAME=
 SMTP_PASSWORD=
-HOST_ADDRESS=http://localhost:8080
+
+FRONT_DEVELOPMENT_HOST_URL=
+FRONT_PRODUCTION_HOST_URL=
+
+SERVER_DEVELOPMENT_HOST_URL=
+SERVER_PRODUCTION_HOST_URL=
 
 DATABASE_URL=
-NODE_ENV=
+NODE_ENV=production
+SESSION_SECRET=
+
+RENDER_DATABASE=
+RAILWAY_DATABASE=
